--- a/app/routes.yml
+++ b/app/routes.yml
@@ -84,13 +84,12 @@ build.start:
   conditions:
     repo:     "[A-Za-z0-9_-]+"
 
-### STUB - FIX ME
 build.handle:
   method:     "POST"
   route:      "/repository/:repo/build"
   stack:
     - login.bouncer
-    - nyi.page
+    - repository.build.start.handle.page
   conditions:
     repo:     "[A-Za-z0-9_-]+"
 
@@ -363,6 +362,14 @@ admin.envs:
     - login.bouncer
     - admin.bouncer
     - admin.envs.page
+
+admin.envs.reorder.handle:
+  method:     "POST"
+  route:      "/admin/environments/reorder"
+  stack:
+    - login.bouncer
+    - admin.bouncer
+    - nyi.page
 
 ### STUB - FIX ME
 admin.env.create:
