--- a/app/routes.yml
+++ b/app/routes.yml
@@ -51,6 +51,12 @@ repo:
   conditions:
     repo:     "[A-Za-z0-9_-]+"
 
+denied:
+  method: 'GET'
+  route: '/denied'
+  stack: ['denied.page']
+
+
 ########################################################################################################################
 # BUILD ROUTES
 ########################################################################################################################
@@ -167,6 +173,27 @@ server:
     - server.page
   conditions:
     server:   "[A-Za-z0-9_-]+"
+
+########################################################################################################################
+# USER ROUTES
+########################################################################################################################
+
+profile.edit:
+  method:     "GET"
+  route:      "/profile/:id/edit"
+  stack:
+    - login.bouncer
+    - profile.edit.page
+  conditions:
+    id:       "[\d]+"
+profile.edit.handle:
+  method:     "POST"
+  route:      "/profile/:id/edit"
+  stack:
+    - login.bouncer
+    - profile.edit.page
+  conditions:
+    id:       "[\d]+"
 
 ########################################################################################################################
 # ADMIN REPO ROUTES
