Update all the user pages
- Move templates to user/ folder
- Move page services to application.yml
- Change urls to be under "users/"
- Add "/users/current" for currently logged in user
- Minor tweaks to environment page titles to match user page titles

--- a/app/application.yml
+++ b/app/application.yml
@@ -1,7 +1,6 @@
 # Application specific endpoints and controllers go here
 services:
 
-
   ######################################################################################################################
   # ENVIRONMENT CONTROLLERS
   ######################################################################################################################
@@ -82,6 +81,53 @@ services:
       - @doctrine.em
       - @session
       - @url.helper
+
+  ######################################################################################################################
+  # USER CONTROLLERS
+  ######################################################################################################################
+
+  user.page:
+    class: 'QL\Hal\Controllers\User\UserController'
+    arguments:
+      - @user.twig
+      - @layout
+      - @pushPermissionService
+      - @ldapService
+      - @user.repo
+      - @user
+      - @doctrine.em
+  user.twig:
+    parent: 'twig.template'
+    arguments:
+      - 'user/user.twig'
+
+  users.page:
+    class: 'QL\Hal\Controllers\User\UsersController'
+    arguments:
+      - @users.twig
+      - @layout
+      - @user.repo
+  users.twig:
+    parent: 'twig.template'
+    arguments:
+      - 'user/users.twig'
+
+  user.edit.page:
+    class: 'QL\Hal\Controllers\User\EditController'
+    arguments:
+      - @user.edit.twig
+      - @layout
+      - @pushPermissionService
+      - @ldapService
+      - @user.repo
+      - @doctrine.em
+      - @url.helper
+  user.edit.twig:
+    parent: 'twig.template'
+    arguments:
+      - 'user/user.edit.twig'
+  user.edit.handle:
+    parent: 'user.edit.page'
 
   ######################################################################################################################
   # GENERAL USE CONTROLLERS
